<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_name">Predict That</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="close">Close</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="sign_in_with_facebook">SIGN IN WITH FACEBOOK</string>
    <string name="need_an_account">Need an Account?</string>
    <string name="forgot_your_password"><u>Forgot Your Password?</u></string>
    <string name="loading">Loading</string>
    <string name="wait_while_loading">Wait while loading...</string>
    <string name="member_since_f" formatted="false">Member Since %s</string>
    <string name="points_f" formatted="false">%d points</string>
    <string name="wins_f" formatted="false">%d wins(%.2f win</string>
    <string name="create_games">CREATE GAMES</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Menu</string>
    <string name="auto_fill">AUTO FILL</string>
    <string name="auto_removed">Auto-removed\nbenched players</string>
    <string name="auto_removed_one_line">Auto-removed benched players</string>
    <string name="your_team">Your Team</string>
    <string name="trade">TRADE</string>
    <string name="add">ADD</string>
    <string name="pt25">PT25</string>
    <string name="submit_100fb">100FB</string>
    <string name="submit_hth_27fb">HTH 27FB</string>
    <string name="predict_that">PREDICT <i>THAT </i></string>
    <string name="submit">SUBMIT</string>
    <string name="less">LESS</string>
    <string name="more">MORE</string>
    <string name="you_predict">You predict&#160;</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="avatar">Avatar</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_name">Change Name</string>
    <string name="new_name">New Name</string>
    <string name="change_email">Change Email</string>
    <string name="new_email">New Email</string>
    <string name="new_pwd">New Password</string>
    <string name="current_pwd">Current Password</string>
    <string name="roster_predictions">Roster <i>Predictions </i></string>
    <string name="individual_predictions">Individual <i>Predictions </i></string>
    <string name="pt25_italic"><i>PT25 </i></string>
    <string name="back">BACK</string>
    <string name="points">Points</string>

    <!--<string name="wins_f">%$d wins%$d win </string>-->

    <!-- errors -->
    <string name="error">Error</string>
    <string name="error_field_required">Required field</string>
    <string name="unknown_error">Unknown error</string>
    <string name="please_provide_name">Please provide name</string>
    <string name="please_provide_email">Please provide email</string>
    <string name="please_provide_password">Please provide password</string>
    <string name="please_provide_valid_email">Please provide valid email</string>
    <string name="please_provide_valid_password">Please provide password at least 6 characters long</string>
    <string name="balance">Balance</string>
    <string name="fill_roster">Fill roster at first!</string>
    <string name="please_provide_valid_current_password">Current password must be at least 6 characters long</string>
    <string name="please_provide_valid_confirm_password">Confirmation password does not match</string>

    <!-- facebook app id -->

    <!--<string name="app_id">436114143174192</string>-->

    <!--stage-->
    <!--FACEBOOK_APP_ID = "436114143174192"-->
    <!--FACEBOOK_APP_SECRET = "0f99d3d28ef7d84d6b55cdb78c238b61"-->

    <!--production-->

    <!---->
    <!--<string name="app_id">380919122046469</string>-->
    <string name="app_id">517379538328159</string>
    <!-- Nav Drawer Menu Items -->

        <string name="my_games">My Games</string><!--1-->
        <string name="create_game">Create Game</string><!--2-->
        <string name="rules">Rules</string><!--3-->
        <string name="legal_stuff">How It Works/Support</string><!--4-->
        <string name="support">Subscription Terms</string><!--5-->
        <string name="settings">Settings</string><!--6-->
        <string name="sign_out">Sign Out</string><!--7-->
        <string name="predictions">Predictions</string>
    <string name="wins">Wins</string>
    <string name="prestige">PresTige</string>
    <string name="no_contents_now">No Games Scheduled</string>
    <string name="fan_buks">FanBucks</string>
    <string name="did_not_play">Did not play</string>
    <string name="sports">Sports</string>
    <string name="mlb">MLB</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="ok">Ok</string>
    <string name="fantasy_sports">Fantasy Sports</string>
    <string name="games_for_today">Games For Today</string>
    <string name="your_choices">Your Choices</string>
    <string name="info">Info</string>
    <string name="game_predictions">Game predictions</string>
    <string name="win_the_cup">Win The Cup</string>
    <string name="win_the_group">Win The Group</string>
    <string name="daily_wins">Daily Wins</string>
    <string name="mvp">MVP</string>
    <string name="pick5">Pick 5</string>
    <string name="pick">Pick</string>

    <string-array name="prediction_menu_list">
        <item>Roster</item>
        <item>Individual</item>
    </string-array>

</resources>
