<ScrollView android:layout_weight="1" xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/container"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.fantasysport.activities.SignInActivity"
                tools:ignore="MergeRootFrame"
                android:orientation="vertical"
                >

            <FrameLayout android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:background="@color/abc_search_url_text_pressed"
                           android:scaleType="centerCrop"
                           android:id="@+id/background_img"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="@dimen/side_margin"
                              android:paddingRight="@dimen/side_margin"
                              android:layout_gravity="center_vertical">

                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textColor="#FFFFFF"
                              android:text="Sign Up"
                              android:textSize="27dip"
                              android:layout_marginTop="15dip"/>

                    <EditText android:id="@+id/name_txt"
                              android:inputType="text"
                              android:hint="@string/name"
                              android:layout_marginTop="20dp"
                              style="@style/auth_edit_text"/>

                    <EditText android:id="@+id/email_txt"
                              android:inputType="textEmailAddress"
                              android:hint="@string/email"
                              style="@style/auth_edit_text"/>

                    <EditText
                            android:id="@+id/password_txt"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:imeActionLabel="action_sign_in_short"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            style="@style/auth_edit_text"/>

                    <Button android:id="@+id/sign_up_btn"
                            android:text="@string/sign_up"
                            style="@style/green_auth_button"/>

                    <Button android:text="@string/sign_up_with_facebook"
                            android:id="@+id/facebook_btn"
                            style="@style/blue_auth_button"
                            android:layout_marginBottom="15dip"/>
                </LinearLayout>

            </FrameLayout>

            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="@dimen/bottom_bar_height"
                         android:background="@color/bottom_bar_background"
                         android:layout_gravity="bottom">
            </FrameLayout>
        </LinearLayout>

</ScrollView>

