<ScrollView android:layout_weight="1" xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/container"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.fantasysport.activities.SignInActivity"
                tools:ignore="MergeRootFrame"
                android:orientation="vertical"
                >

            <FrameLayout android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                <ImageView android:layout_width="match_parent"
                           android:layout_height="match_parent"
                          android:background="@color/abc_search_url_text_pressed"

                           android:id="@+id/background_img"
                           android:scaleType="centerCrop"/>

                <LinearLayout android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:orientation="vertical"
                              android:paddingLeft="@dimen/side_marging"
                              android:paddingRight="@dimen/side_marging"
                              android:layout_gravity="center_vertical"
                        >
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textColor="#FFFFFF"
                              android:text="Sign In"
                              android:textSize="@dimen/lage_font"
                              android:layout_marginTop="15dip"
                            />

                    <EditText android:id="@+id/email_txt"
                              android:inputType="textEmailAddress"
                              android:hint="@string/email"
                              android:layout_marginTop="20dp"
                              style="@style/auth_edit_text"/>

                    <EditText android:id="@+id/password_txt"
                              android:hint="@string/password"
                              android:inputType="textPassword"
                              android:imeActionLabel="action_sign_in_short"
                              android:imeActionId="@+id/login"
                              android:imeOptions="actionUnspecified"
                              style="@style/auth_edit_text"/>

                    <com.fantasysport.views.ExButton android:id="@+id/sign_in_btn"
                            android:text="@string/sign_in"
                            style="@style/green_auth_button"
                            custom:fontFamily="prohibitionRound"/>

                    <com.fantasysport.views.ExButton android:text="@string/sign_in_with_facebook"
                            android:id="@+id/facebook_btn"
                            style="@style/blue_auth_button"
                            custom:fontFamily="prohibitionRound" />

                    <TextView android:layout_marginTop="15dip"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="@string/forgot_your_password"
                              android:layout_gravity="center_horizontal"
                              android:textColor="#ffffff"
                              android:layout_marginBottom="15dip"
                              android:id="@+id/forgot_pwd_lbl"
                            />

                </LinearLayout>

            </FrameLayout>



            <FrameLayout android:layout_width="match_parent" android:layout_height="0dp"
                         android:id="@+id/bottom_bar"
                         android:background="@color/bottom_bar_background"
                         android:layout_gravity="bottom">
            </FrameLayout>
        </LinearLayout>

</ScrollView>


