<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="@dimen/position_view_height"
                  android:paddingLeft="@dimen/side_margin"
                  android:paddingRight="@dimen/side_margin"
                  android:orientation="horizontal"
                  android:id="@+id/autofill_holder">
        <com.fantasysport.views.ExButton android:layout_width="wrap_content"
                                         android:layout_height="@dimen/btn_height"
                                         android:layout_gravity="center_vertical"
                                         android:background="@drawable/autofill_button"
                                         android:text="@string/auto_fill"
                                         android:textSize="@dimen/x_medium_font"
                                         android:paddingRight="@dimen/btn_padding"
                                         android:paddingLeft="@dimen/btn_padding"
                                         android:textColor="#ffffff"
                                         android:id="@+id/autofill_btn"
                                         custom:fontFamily="prohibitionRound"/>
    </LinearLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="#CCCCCC"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:paddingRight="@dimen/side_margin"
                 android:paddingLeft="@dimen/side_margin"
                 android:background="#E6E6E6">
        <com.fantasysport.views.RobotoThinTextView android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   android:layout_gravity="center_vertical"
                                                   android:textSize="@dimen/s_lage_font"
                                                   android:textColor="#595959"
                                                   android:text="@string/your_choices"/>

    </FrameLayout>
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="#CCCCCC"/>
    <ListView android:layout_width="match_parent" android:layout_height="match_parent"
              android:layout_weight="1" android:id="@+id/game_list"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bottom_bar"
                 android:background="#464646"
                 android:layout_gravity="bottom"
                 android:padding="@dimen/side_margin">

        <com.fantasysport.views.ExButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/submit_btn_height"
                android:layout_weight="1"
                android:background="@drawable/green_button"
                android:text="@string/submit"
                android:textColor="@color/submit_button_text_color"
                android:id="@+id/submit_btn"
                android:textSize="@dimen/x_medium_font"
                custom:fontFamily="prohibitionRound"/>
    </FrameLayout>

</LinearLayout>