<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="#CCCCCC"/>

    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/side_hor_marging"
                 android:paddingTop="@dimen/side_hor_marging"
                 android:orientation="horizontal"
                 android:background="#E6E6E6">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:textSize="@dimen/lage_font"
                  android:textColor="#595959"
                  android:id="@+id/header_lbl"
                  android:paddingLeft="@dimen/side_marging"
                />
    </FrameLayout>

    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="#CCCCCC"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/current_pwd_block">
        <EditText
                android:id="@+id/current_password_txt"
                android:inputType="textPassword"
                android:hint="@string/current_pwd"
                android:imeActionLabel="action_sign_in_short"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                style="@style/update_user_edit_text"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="#CCCCCC"/>
    </LinearLayout>
    <EditText
            android:id="@+id/text_txt"
            android:inputType="text"
            android:imeActionLabel="action_sign_in_short"
            android:imeOptions="actionUnspecified"
            style="@style/update_user_edit_text"/>
    <View android:layout_width="match_parent"
          android:layout_height="1dip"
          android:background="#CCCCCC"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:id="@+id/confirm_pwd_block">
        <EditText
                android:id="@+id/confirm_pwd_txt"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:imeActionLabel="action_sign_in_short"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                style="@style/update_user_edit_text"/>
        <View android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="#CCCCCC"/>
    </LinearLayout>
    <View android:layout_width="match_parent" android:layout_height="match_parent"
          android:layout_weight="1"/>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bottom_bar"
                 android:background="#464646"
                 android:padding="@dimen/side_marging">
        <Button android:layout_width="wrap_content"
                android:layout_height="@dimen/submit_btn_height"
                android:layout_gravity="center"
                android:background="@drawable/submit_prediction_button"
                android:text="@string/submit"
                android:paddingRight="@dimen/btn_padding"
                android:paddingLeft="@dimen/btn_padding"
                android:textColor="#ffffff"
                android:id="@+id/submit_btn"
                android:textSize="@dimen/x_medium_font"
                />
    </FrameLayout>
</LinearLayout>