<LinearLayout android:layout_width="match_parent"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:custom="http://schemas.android.com/apk/res-auto"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#ffffff"
        >
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_weight="1"
            >
        <include layout="@layout/home_header" android:layout_width="wrap_content"
                 android:id="@+id/header_view"
                 android:layout_height="wrap_content"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="@dimen/position_view_height"
                      android:paddingLeft="@dimen/side_margin"
                      android:paddingRight="@dimen/side_margin"
                      android:orientation="horizontal">
            <com.fantasysport.views.ExButton android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/autofill_button"
                    android:text="@string/auto_fill"
                    android:textSize="@dimen/x_medium_font"
                    android:paddingRight="@dimen/btn_padding"
                    android:paddingLeft="@dimen/btn_padding"
                    android:textColor="#ffffff"
                    android:id="@+id/autofill_btn"
                    custom:fontFamily="prohibitionRound" />
            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1">
                <LinearLayout android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_gravity="right|center_vertical"
                              android:gravity="center_vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textSize="@dimen/low_font"
                              android:textColor="#999999"
                              android:lineSpacingExtra="2dp"
                              android:text="@string/auto_removed"
                              android:gravity="right"
                              android:paddingRight="2dp"/>
                    <com.fantasysport.views.Switcher android:layout_width="@dimen/switcher_width"
                                                     android:layout_height="@dimen/switcher_height"
                                                     android:id="@+id/switcher"/>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="#CCCCCC"/>

        <FrameLayout android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:paddingRight="@dimen/side_margin"
                     android:paddingLeft="@dimen/side_margin"
                     android:background="#E6E6E6">
            <com.fantasysport.views.RobotoThinTextView android:layout_width="wrap_content"
                                                       android:layout_height="wrap_content"
                                                       android:layout_gravity="center_vertical"
                                                       android:textSize="@dimen/s_lage_font"
                                                       android:textColor="#595959"
                                                       android:text="@string/your_team"
                    />

            <com.fantasysport.views.ExTextView android:layout_width="wrap_content"
                                               android:layout_height="wrap_content"
                                               android:layout_gravity="right|center_vertical"
                                               android:textSize="@dimen/lage_font"
                                               android:textColor="#E84C3D"
                                               android:id="@+id/money_lbl"
                                               custom:fontFamily="prohibitionRound"
                    />

        </FrameLayout>
        <View android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="#CCCCCC"/>

        <uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/ptr_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/roster_list"
                    android:dividerHeight="2dp"
                    android:fadingEdge="none"
                    android:fastScrollEnabled="false"
                    android:footerDividersEnabled="false"
                    android:headerDividersEnabled="true"
                    android:smoothScrollbar="true"
                    android:divider="@drawable/player_devider"
                    />
        </uk.co.senab.actionbarpulltorefresh.extras.actionbarcompat.PullToRefreshLayout>
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/bottom_bar"
                 android:background="#464646"
                 android:layout_gravity="bottom">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:padding="@dimen/side_margin">
            <com.fantasysport.views.ExButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/submit_btn_height"
                    android:layout_weight="1"
                    android:background="@drawable/left_submit_button"
                    android:text="@string/submit_100fb"
                    android:textColor="@color/submit_button_text_color"
                    android:id="@+id/submit_100fb_btn"
                    android:textSize="@dimen/x_medium_font"
                    custom:fontFamily="prohibitionRound" />
            <com.fantasysport.views.ExButton
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/submit_btn_height"
                    android:layout_weight="1"
                    android:textColor="@color/submit_button_text_color"
                    android:background="@drawable/right_submit_button"
                    android:text="@string/submit_hth_27fb"
                    android:id="@+id/submit_hth_btn"
                    android:textSize="@dimen/x_medium_font"
                    custom:fontFamily="prohibitionRound"
                    />
        </LinearLayout>

        <View android:layout_width="1dp"
              android:layout_height="@dimen/submit_btn_devider_height"
              android:layout_gravity="center"
              android:background="#AAFFFFFF"/>
    </FrameLayout>
</LinearLayout>
